fix: remove unnecessary z-index (#48)

--- a/chrome/browser.css
+++ b/chrome/browser.css
@@ -14,7 +14,6 @@
     position: absolute;
     margin: -20px 4px;
     padding: 0 4px;
-    z-index: 2;
     font-size: 1.15em;
   }
 }
